--- a/index.html
+++ b/index.html
@@ -118,16 +118,16 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="d-block w-100" src="images/slideshow1.jpg" alt="First slide">
+                    <img class="d-block w-100" src="images/slideshow1.png" alt="First slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="images/slideshow2.jpg" alt="Second slide">
+                    <img class="d-block w-100" src="images/slideshow2.png" alt="Second slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="images/slideshow3.jpg" alt="Third slide">
+                    <img class="d-block w-100" src="images/slideshow3.png" alt="Third slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="images/slideshow4.jpg" alt="Fourth slide">
+                    <img class="d-block w-100" src="images/slideshow4.png" alt="Fourth slide">
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -141,8 +141,12 @@
         </div>
         <div class="line">
         </div>
+
         <div class="project-container">
             <h1>Recent Projects</h1>
+            <div class="rectangle">
+                <img src="images/expand_more_FILL0_wght400_GRAD0_opsz24.svg">
+            </div>
             <div class="container-fluid mt-4">
                 <div class="row">
                     <div class="col-md-6">
@@ -159,6 +163,9 @@
                             perspectives of Ottawa and the skateboarding world through my lens.</p>
                     </div>
                 </div>
+            </div>
+            <div class="rectangle">
+                <img src="images/expand_more_FILL0_wght400_GRAD0_opsz24.svg">
             </div>
             <div class="container-fluid mt-4 custom-container">
                 <div class="row">
@@ -177,7 +184,9 @@
                     </div>
                 </div>
             </div>
-
+            <div class="rectangle">
+                <img src="images/expand_more_FILL0_wght400_GRAD0_opsz24.svg">
+            </div>
             <div class="container-fluid mt-4">
                 <div class="row">
                     <div class="col-md-6">
@@ -197,6 +206,26 @@
                     </div>
                 </div>
             </div>
+            <div class="rectangle">
+                <img src="images/expand_more_FILL0_wght400_GRAD0_opsz24.svg">
+            </div>
+            <div class="container-fluid mt-4 custom-container">
+                <div class="row">
+                    <div class="col-md-6 order-md-2">
+                        <img src="images/project4.png" class="img-fluid" alt="Image">
+                    </div>
+                    <div class="col-md-6 order-md-1">
+                        <h2>Web Development</h2>
+                        <p> I specialize in creating sophisticated and user-centric websites. The "Elegant Cravings"
+                            bakery site, a standout from my college projects, showcases my mastery in seamless front-end
+                            design, combining aesthetic appeal with intuitive user interactions. My commitment extends
+                            to delivering websites tailored to clients' needs, ensuring a balance between visual appeal
+                            and functional robustness.
+                        </p>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </main>
 
