--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,7 @@
 </head>
 
 <body>
+
     <div class="intro">
         <h1 class="logo-header">
             <span class="logo">AASHIF</span><span class="logo">BISHRY</span>
@@ -111,127 +112,49 @@
         </nav>
 
     </header>
-    <main class="home-main">
-
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-            </ol>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img class="d-block w-100" src="images/slideshow1.png" alt="First slide">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="images/slideshow2.png" alt="Second slide">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="images/slideshow3.png" alt="Third slide">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="images/slideshow4.png" alt="Fourth slide">
-                </div>
+    <main class="contact-main">
+        <div class="rectangle-container pl-3 pe-3 pt-3 pl-lg-5 pe-lg-5 pt-lg-5">
+            <div class="rectangle" data-aos="fade-up">
+                <img src="images/expand_more_FILL0_wght400_GRAD0_opsz24.svg">
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
         </div>
-        <div class="line">
+        <section class="contact-form pl-3 pe-3 pb-3 pl-lg-5 pe-lg-5 pb-lg-5">
+            <div class="container-fluid form">
+                <div class="row">>Contact Me</div>
+                <div class="row">
+                    <p class="col-11 offset-1 contact-passage">> Feel free to contact me regarding project work,
+                        commissions
+                        or to simply
+                        ask questions.</p>
+                </div>
+                <form>
+                    <div class="form-group">
+                        <label for="fname">Name:</label>
+                        <input type="text" class="form-control" id="fname" aria-label="Enter Full name">
+                    </div>
+                    <div class="form-group">
+                        <label for="e-mail">Email</label>
+                        <input type="text" class="form-control" id="e-mail" aria-label="Enter E-mail">
+                    </div>
+                    <div class="form-group">
+                        <label for="text-area">Message</label>
+                        <textarea class="form-control" id="text-area" rows="10"></textarea>
+                    </div>
+                    <div class="button-container">
+                        <div class="d-flex justify-content-end">
+                            <button class="btn">Send</button>
+                        </div>
+                    </div>
+                </form>
+
+            </div>
+        </section>
+
+        <div class="contact-container d-flex" data-aos="fade-up">
+            <img class="svg-contact" src="images/contact.svg">
         </div>
 
-        <div class="project-container">
-            <h1>Recent Projects</h1>
-            <div class="rectangle" data-aos="fade-up">
-                <img src="images/expand_more_FILL0_wght400_GRAD0_opsz24.svg">
-            </div>
-            <div class="container-fluid mt-4" data-aos="fade-up">
-                <div class="row">
-                    <div class="col-md-6">
-                        <img src="images/project1.jpg" class="img-fluid" alt="Image">
-                    </div>
-                    <div class="col-md-6">
-                        <h2>Photography</h2>
-                        <p>Explore "Ottawa: Through the Lens of a Student" capturing the city's blend of history,
-                            culture, and modernity. From historic landmarks to the vibrant academic scene, each photo
-                            tells my student life story. Faces of Ottawa showcase its diverse community, while city
-                            lights reveal its nighttime charm. Transitioning to "Skateboarding Symphony," witness
-                            dynamic moments frozen in time, capturing the raw energy and creativity of skateboarders
-                            defying gravity. Join me in this visual journey as each snapshot narrates the unique
-                            perspectives of Ottawa and the skateboarding world through my lens.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="rectangle" data-aos="fade-up">
-                <img src="images/expand_more_FILL0_wght400_GRAD0_opsz24.svg">
-            </div>
-            <div class="container-fluid mt-4 custom-container" data-aos="fade-up">
-                <div class="row">
-                    <div class="col-md-6 order-md-2">
-                        <img src="images/project2.jpg" class="img-fluid" alt="Image">
-                    </div>
-                    <div class="col-md-6 order-md-1">
-                        <h2>3D Design</h2>
-                        <p> Dive into my latest project, "3D Design with Blender," where I invite you to explore the
-                            captivating realm of 3D artistry. Leveraging the dynamic capabilities of the versatile
-                            Blender software, this endeavor encompasses digital sculpting, meticulous modeling, dynamic
-                            animations, and the creation of visually stunning art. Join me on a journey through the
-                            intricacies of virtual design as I showcase the transformative power of Blender in bringing
-                            imagination to life in the three-dimensional space.
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="rectangle" data-aos="fade-up">
-                <img src="images/expand_more_FILL0_wght400_GRAD0_opsz24.svg">
-            </div>
-            <div class="container-fluid mt-4" data-aos="fade-up">
-                <div class="row">
-                    <div class="col-md-6">
-
-                        <img src="images/project3.png" class="img-fluid" alt="Image">
-                    </div>
-                    <div class="col-md-6">
-                        <h2>Artwork</h2>
-                        <p>In the realm of digital art, my creations are a seamless fusion of technology and artistic
-                            expression. With precision and infinite flexibility, I blend colors, textures, and shapes to
-                            craft intricate illustrations, design immersive digital landscapes, and experiment with
-                            abstract concepts. My top three go-to digital art software tools include Clip Studio Paint,
-                            Medibang Paint, and Adobe Illustrator, enabling me to push the boundaries of imagination in
-                            my artistic endeavors.
-                        </p>
-
-                    </div>
-                </div>
-            </div>
-            <div class="rectangle" data-aos="fade-up">
-                <img src="images/expand_more_FILL0_wght400_GRAD0_opsz24.svg">
-            </div>
-            <div class="container-fluid mt-4 custom-container" data-aos="fade-up">
-                <div class="row">
-                    <div class="col-md-6 order-md-2">
-                        <img src="images/project4.png" class="img-fluid" alt="Image">
-                    </div>
-                    <div class="col-md-6 order-md-1">
-                        <h2>Web Development</h2>
-                        <p> I specialize in creating sophisticated and user-centric websites. The "Elegant Cravings"
-                            bakery site, a standout from my college projects, showcases my mastery in seamless front-end
-                            design, combining aesthetic appeal with intuitive user interactions. My commitment extends
-                            to delivering websites tailored to clients' needs, ensuring a balance between visual appeal
-                            and functional robustness.
-                        </p>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-    </main>justify
+    </main>
 
     <footer>
         <div class="marquee2 d-flex">
@@ -263,7 +186,7 @@
             </ul>
         </div>
     </footer>
-    </div>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
@@ -276,6 +199,7 @@
     <script>
         AOS.init(); 
     </script>
+
     <script src="local-scripts/intro.js"></script>
     <script src="local-scripts/top-button.js"></script>
 </body>
