links all pages

--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <link rel="stylesheet" href="css/main.css">
 </head>
@@ -112,48 +113,35 @@
         </nav>
 
     </header>
-    <main class="contact-main">
-        <div class="rectangle-container pl-3 pe-3 pt-3 pl-lg-5 pe-lg-5 pt-lg-5">
-            <div class="rectangle" data-aos="fade-up">
-                <img src="images/expand_more_FILL0_wght400_GRAD0_opsz24.svg">
-            </div>
-        </div>
-        <section class="contact-form pl-3 pe-3 pb-3 pl-lg-5 pe-lg-5 pb-lg-5">
-            <div class="container-fluid form">
-                <div class="row">>Contact Me</div>
-                <div class="row">
-                    <p class="col-11 offset-1 contact-passage">> Feel free to contact me regarding project work,
-                        commissions
-                        or to simply
-                        ask questions.</p>
+    <main class="about-main">
+        <!-- <div class="container-fluid mt-4" data-aos="fade-up">
+            <div class="row justify-content-center">
+                <div class="col-lg-5 col-md-4 col-sm-7">
+                    <img src="images/aashif.jpg" class="img-fluid" alt="Image">
                 </div>
-                <form>
-                    <div class="form-group">
-                        <label for="fname">Name:</label>
-                        <input type="text" class="form-control" id="fname" aria-label="Enter Full name">
-                    </div>
-                    <div class="form-group">
-                        <label for="e-mail">Email</label>
-                        <input type="text" class="form-control" id="e-mail" aria-label="Enter E-mail">
-                    </div>
-                    <div class="form-group">
-                        <label for="text-area">Message</label>
-                        <textarea class="form-control" id="text-area" rows="10"></textarea>
-                    </div>
-                    <div class="button-container">
-                        <div class="d-flex justify-content-end">
-                            <button class="btn">Send</button>
-                        </div>
-                    </div>
-                </form>
+                <div class="col-lg-6 col-md-7 col-sm-7">
+                    <h2>About Me</h2>
+                    <p>A visionary Interactive Media Design student at Algonquin College. Blending creativity with
+                        technology, they craft immersive visual narratives that redefine storytelling. Embrace their
+                        journey as they reshape the boundaries of art and interaction.</p>
+                </div>
+            </div>
+        </div> -->
 
+        <section class="vision">
+            <div class="container">
+                <div class="row justify-content-center align-items-center">
+                    <div class="col-md-12 text-center">
+                        <h2>Vision</h2>
+                        <p>Welcome to my creative world! I’m a multi-talented artist, web developer, graphic designer,
+                            and photographer on a mission to blend innovation and aesthetics. Through my work, I strive
+                            to captivate, inform, and inspire, leveraging my diverse skill set to craft digital and
+                            visual experiences that leave a lasting impact. Join me on this artistic journey as we
+                            explore the fusion of technology and creativity to bring visions to life.</p>
+                    </div>
+                </div>
             </div>
         </section>
-
-        <div class="contact-container d-flex" data-aos="fade-up">
-            <img class="svg-contact" src="images/contact.svg">
-        </div>
-
     </main>
 
     <footer>
