--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">Home</a>
+                            <a class="nav-link" aria-current="page" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">About</a>
+                            <a class="nav-link" href="about.html">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
+                            <a class="nav-link" href="contact.html">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -154,7 +154,7 @@
             <div class="container-fluid mt-4" data-aos="fade-up">
                 <div class="row">
                     <div class="col-md-6">
-                        <img src="images/project1.jpg" class="img-fluid" alt="Image">
+                        <img src="images/project1.jpg" class="img-fluid project" alt="Image">
                     </div>
                     <div class="col-md-6">
                         <h2>Photography</h2>
@@ -174,7 +174,7 @@
             <div class="container-fluid mt-4 custom-container" data-aos="fade-up">
                 <div class="row">
                     <div class="col-md-6 order-md-2">
-                        <img src="images/project2.jpg" class="img-fluid" alt="Image">
+                        <img src="images/project2.jpg" class="img-fluid project" alt="Image">
                     </div>
                     <div class="col-md-6 order-md-1">
                         <h2>3D Design</h2>
@@ -195,7 +195,7 @@
                 <div class="row">
                     <div class="col-md-6">
 
-                        <img src="images/project3.png" class="img-fluid" alt="Image">
+                        <img src="images/project3.png" class="img-fluid project" alt="Image">
                     </div>
                     <div class="col-md-6">
                         <h2>Artwork</h2>
@@ -216,7 +216,9 @@
             <div class="container-fluid mt-4 custom-container" data-aos="fade-up">
                 <div class="row">
                     <div class="col-md-6 order-md-2">
-                        <img src="images/project4.png" class="img-fluid" alt="Image">
+                        <a href="https://ahme0579.github.io/mtm6201-midterm/" target="_blank">
+                            <img src="images/project4.png" class="img-fluid project" alt="Image">
+                        </a>
                     </div>
                     <div class="col-md-6 order-md-1">
                         <h2>Web Development</h2>
@@ -251,15 +253,18 @@
         <div class="footermenu d-flex justify-content-between align-items-center">
             <ul class="column-menu d-flex flex-column">
                 <li><a href="#">Aashif Bishry</a></li>
-                <li><i class="fa-brands fa-square-instagram"></i><a href="#">Instagram</a></li>
-                <li><i class="fa-brands fa-square-x-twitter"></i><a href="#">Twitter</a></li>
-                <li><i class="fa-brands fa-square-behance"></i><a href="#">Behance</a></li>
+                <li><i class="fa-brands fa-square-instagram"></i><a href="https://www.instagram.com/"
+                        target="_blank">Instagram</a></li>
+                <li><i class="fa-brands fa-square-x-twitter"></i><a href="https://twitter.com/"
+                        target="_blank">Twitter</a></li>
+                <li><i class="fa-brands fa-square-behance"></i><a href="https://www.behance.net/"
+                        target="_blank">Behance</a></li>
             </ul>
             <ul class="column-menu">
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#">Portfolio</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
     </footer>
