completes all pages

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
 
     <div class="intro">
         <h1 class="logo-header">
-            <span class="logo">AASHIF</span><span class="logo">BISHRY</span>
+            <span class="logo">ABOUT</span><span class="logo">ME</span>
         </h1>
     </div>
     <div class="noise"></div>
@@ -114,19 +114,19 @@
 
     </header>
     <main class="about-main">
-        <!-- <div class="container-fluid mt-4" data-aos="fade-up">
+        <div class="container-fluid mt-4 about-container" data-aos="fade-up">
             <div class="row justify-content-center">
-                <div class="col-lg-5 col-md-4 col-sm-7">
-                    <img src="images/aashif.jpg" class="img-fluid" alt="Image">
+                <div class="col-lg-3 col-md-5 col-sm-11">
+                    <img src="images/aashif.jpg" class="img-fluid aashif" alt="Image">
                 </div>
-                <div class="col-lg-6 col-md-7 col-sm-7">
+                <div class="col-lg-7 col-md-7 col-sm-11">
                     <h2>About Me</h2>
                     <p>A visionary Interactive Media Design student at Algonquin College. Blending creativity with
                         technology, they craft immersive visual narratives that redefine storytelling. Embrace their
                         journey as they reshape the boundaries of art and interaction.</p>
                 </div>
             </div>
-        </div> -->
+        </div>
 
         <section class="vision">
             <div class="container">
