--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
 
     <div class="intro">
         <h1 class="logo-header">
-            <span class="logo">AASHIF</span><span class="logo">BISHRY</span>
+            <span class="logo">CONTACT</span><span class="logo">ME</span>
         </h1>
     </div>
     <div class="noise"></div>
@@ -138,7 +138,7 @@
                     </div>
                     <div class="form-group">
                         <label for="text-area">Message</label>
-                        <textarea class="form-control" id="text-area" rows="10"></textarea>
+                        <textarea class="form-control" id="text-area" rows="8"></textarea>
                     </div>
                     <div class="button-container">
                         <div class="d-flex justify-content-end">
