--- a/about.html
+++ b/about.html
@@ -28,6 +28,12 @@
     <div class="noise"></div>
     <button onclick="topFunction()" id="myBtn" title="Go to top">^</button>
     <header>
+        <div class="skip-link">
+            <a href="#aboutme" class="skip" aria-label="skips to about me">Skip to About Me</a>
+            <a href="#vision" class="skip" aria-label="skips to Vision">Skip to Vision</a>
+        </div>
+
+        <!-- use of svg for the main header -->
         <svg viewBox="0 0 1920 157" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path
                 d="M-0.356018 157V31.432C-0.356018 25.6187 1.02465 20.3867 3.78598 15.736C6.69265 10.94 10.4713 7.16137 15.122 4.40003C19.918 1.49337 25.2226 0.0400391 31.036 0.0400391H124.994C130.807 0.0400391 136.039 1.49337 140.69 4.40003C145.486 7.16137 149.337 10.94 152.244 15.736C155.151 20.3867 156.604 25.6187 156.604 31.432V157H124.776V105.334H31.036V157H-0.356018ZM31.036 73.942H124.776V32.958C124.776 32.522 124.631 32.2314 124.34 32.086C124.195 31.7954 123.904 31.65 123.468 31.65H32.344C31.908 31.65 31.5446 31.7954 31.254 32.086C31.1086 32.2314 31.036 32.522 31.036 32.958V73.942Z"
@@ -61,7 +67,7 @@
                 d="M1835.73 157V98.358L1763.13 0.0400391H1800.41L1851.42 64.132L1902.22 0.0400391H1939.93L1867.34 98.576V157H1835.73Z"
                 fill="#CDC7C2" />
         </svg>
-
+        <!-- marquee done with a repeating div and styled in css to create infinite effect -->
         <div class="marquee d-flex">
             <ul class="marquee__content d-flex justify-content-space-around">
                 <li>Designer</li>
@@ -87,11 +93,11 @@
         </div>
 
 
-
+        <!-- navbar done completely uising bootstrap -->
         <nav class="navbar rounded navbar-expand-lg ms-3 me-3">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#"><img class="menu-logo"
-                        src="images/raclogo-transp-278_x_185-139_x_92.png" alt=""></a>
+                        src="images/raclogo-transp-278_x_185-139_x_92.png" alt="logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span></span>
@@ -99,13 +105,14 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                            <a class="nav-link" aria-current="page" href="index.html"
+                                aria-label="Open home page">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="about.html">About</a>
+                            <a class="nav-link" href="about.html" aria-label="Open about page">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contact</a>
+                            <a class="nav-link" href="contact.html" aria-label="Open contact page">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -114,21 +121,27 @@
 
     </header>
     <main class="about-main">
-        <div class="container-fluid mt-4 about-container" data-aos="fade-up">
-            <div class="row justify-content-center">
-                <div class="col-lg-3 col-md-5 col-sm-11">
-                    <img src="images/aashif.jpg" class="img-fluid aashif" alt="Image">
-                </div>
-                <div class="col-lg-7 col-md-7 col-sm-11">
-                    <h2>About Me</h2>
-                    <p>A visionary Interactive Media Design student at Algonquin College. Blending creativity with
-                        technology, they craft immersive visual narratives that redefine storytelling. Embrace their
-                        journey as they reshape the boundaries of art and interaction.</p>
+        <section id="aboutme">
+            <div class="container-fluid mt-4 about-container" data-aos="fade-up">
+                <div class="row justify-content-center">
+                    <div class="col-lg-3 col-md-5 col-sm-11">
+                        <picture>
+                            <source srcset="images/aashif-resp.jpg" media="(max-width:768px)">
+                            <source srcset="images/aashif.jpg" media="(min-width:768px)">
+                            <img class="img-fluid aashif" src="images/aashif.jpg" alt="First slide">
+                        </picture>
+                    </div>
+                    <div class="col-lg-7 col-md-7 col-sm-11">
+                        <h2>About Me</h2>
+                        <p>A visionary Interactive Media Design student at Algonquin College. Blending creativity with
+                            technology, they craft immersive visual narratives that redefine storytelling. Embrace their
+                            journey as they reshape the boundaries of art and interaction.</p>
+                    </div>
                 </div>
             </div>
-        </div>
+        </section>
 
-        <section class="vision">
+        <section id="vision">
             <div class="container">
                 <div class="row justify-content-center align-items-center">
                     <div class="col-md-12 text-center">
@@ -145,35 +158,37 @@
     </main>
 
     <footer>
+        <!-- footer marquee similar to header marquee but done with a repeating svg pattern -->
         <div class="marquee2 d-flex">
             <div class="marquee__content2 d-flex justify-content-space-around">
-                <img src="images/raccoon.svg">
-                <img src="images/raccoon.svg">
+                <img src="images/raccoon.svg" alt="racccoon logo">
+                <img src="images/raccoon.svg" alt="racccoon logo">
 
 
 
             </div>
             <!-- Mirrors the content above -->
             <div class="marquee__content2 d-flex  justify-content-space-around" aria-hidden="true">
-                <img src="images/raccoon.svg">
-                <img src="images/raccoon.svg">
+                <img src="images/raccoon.svg" alt="racccoon logo">
+                <img src="images/raccoon.svg" alt="racccoon logo">
             </div>
         </div>
+        <!-- footer done with bootstrep flex -->
         <div class="footermenu d-flex justify-content-between align-items-center">
             <ul class="column-menu d-flex flex-column">
-                <li><a href="#">Aashif Bishry</a></li>
-                <li><i class="fa-brands fa-square-instagram"></i><a href="https://www.instagram.com/"
-                        target="_blank">Instagram</a></li>
-                <li><i class="fa-brands fa-square-x-twitter"></i><a href="https://twitter.com/"
-                        target="_blank">Twitter</a></li>
-                <li><i class="fa-brands fa-square-behance"></i><a href="https://www.behance.net/"
-                        target="_blank">Behance</a></li>
+                <li><a href="#" aria-label="Back to top of page">Aashif Bishry</a></li>
+                <li><i class="fa-brands fa-square-instagram"></i><a href="https://www.instagram.com/" target="_blank"
+                        aria-label="Open Instagram">Instagram</a></li>
+                <li><i class="fa-brands fa-square-x-twitter"></i><a href="https://twitter.com/" target="_blank"
+                        aria-label="Open Twitter">Twitter</a></li>
+                <li><i class="fa-brands fa-square-behance"></i><a href="https://www.behance.net/" target="_blank"
+                        aria-label="Open Behance">Behance</a></li>
             </ul>
             <ul class="column-menu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="index.html" aria-label="Open home page">Home</a></li>
+                <li><a href="#" aria-label="Back to top of page">Portfolio</a></li>
+                <li><a href="about.html" aria-label="Open about page">About</a></li>
+                <li><a href="contact.html" aria-label="Open contact page">Contact</a></li>
             </ul>
         </div>
     </footer>
